copying files, b64ing images

--- a/samples/simple-html/page-1.html
+++ b/samples/simple-html/page-1.html
@@ -16,19 +16,10 @@
 #-------------------------------------------------------------------------------
 -->
 
-Welcome to the offl-site homepage.
+<h1>simple-html sample</h1>
 
-Here's the logo:
+<img src="off-site-128x128.png">
 
-![logo](offl-site-100x100.png)
+<p>First page!
 
-Here's the [second page](secondPage.md).
-
-{{plugin:foo}}
-
-{{template}}
-
-\{\{template\}\}
-
-
-
+<p>Go to the <a href="page-2.html">second page</a>
