--- a/samples/simple-html/page-2.html
+++ b/samples/simple-html/page-2.html
@@ -16,6 +16,10 @@
 #-------------------------------------------------------------------------------
 -->
 
-Welcome to the offl-site second page.
+<h1>simple-html sample</h1>
 
-Go back to the [first page](index.md).
+<img src="off-site-128x128.png">
+
+<p>Second page!
+
+<p>Go to the <a href="page-1.html">first page</a>
