--- a/sample-sites/simple-html/main.html
+++ b/sample-sites/simple-html/main.html
@@ -1,6 +1,4 @@
-#!/usr/bin/env node
-
-/*
+<!-- 
 #-------------------------------------------------------------------------------
 # Copyright (c) 2012 Patrick Mueller
 #
@@ -16,14 +14,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #-------------------------------------------------------------------------------
-*/
+-->
 
-var path = require('path')
-var fs   = require('fs')
+<h1>simple-html sample</h1>
 
-var packageDir = path.dirname(fs.realpathSync(__filename))
-var lib        = path.join(packageDir, 'lib')
+<img src="offl-site-128x128.png">
 
-require('coffee-script')
+<p>First page!
 
-require(lib + '/offl-site').run()
+<p>Go to the <a href="page-2.html">second page</a>
